# permutation_based_crypto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crypto-permutation/: CHANGELOG.md  Cargo.toml  README.md
crypto-permutation/src/: buffer.rs  io.rs  lib.rs
crypto-permutation/src/io/: le_uint_slice_reader.rs  le_uint_slice_writer.rs  util.rs
deck-farfalle/: Cargo.toml  README.md
deck-farfalle/scripts/: kravatte_testcases.py
deck-farfalle/src/: input.rs  kravatte.rs  lib.rs  output.rs  xoofff.rs
permutation-keccak/: Cargo.toml  README.md
permutation-keccak/src/: lib.rs  state.rs
permutation-xoodoo/: CHANGELOG.md  Cargo.toml  README.md
permutation-xoodoo/src/: lib.rs  permutation.rs  state.rs  tests.rs
